Trac error template: add user agent and jQuery version information.
The jQuery version information is also added to the About/system information data for good measure.





git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5349 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/about.html
+++ b/trac/templates/about.html
@@ -8,6 +8,11 @@
   <head>
     <title>About</title>
     <link rel="stylesheet" type="text/css" href="${chrome.htdocs_location}css/about.css" />
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $("#systeminfo table").append("<tr><th>jQuery:</th><td>"+$().jquery+"</td></tr>");
+      });
+    </script>
   </head>
 
   <body>
