TracBrowser: further simplifications of the expander.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5353 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -18,7 +18,7 @@
         })
 
         <py:if test="dir">
-          enableExpandDir("", $("#dirlist tr"));
+          enableExpandDir(null, $("#dirlist tr"));
         </py:if>
         <py:if test="file and file.annotate">
           enableBlame("${href.changeset()}/", "${path}");
