Follow-up to r5348, the error message text needs to be able to wrap, in order to be always fully visible.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5360 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -462,6 +462,7 @@ table.listing tbody tr:hover { background: #eed !important }
 #content.error pre, div.system-message pre {
   margin-left: 1em;
   overflow: hidden;
+  white-space: normal;
 }
 div.system-message p { margin: 0; }
 div.system-message p.system-message-title { font-weight: bold; }
