Disable the inplace folder expansion in TracBrowser, for web browsers using an old WebKit release (e.g. current Omniweb and Safari versions). Fixes #5268.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5369 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -18,7 +18,10 @@
         })
 
         <py:if test="dir">
-          enableExpandDir(null, $("#dirlist tr"));
+          /* browsers using old WebKits have issues with expandDir... */
+          var webkit_rev = /AppleWebKit\/(\d+)/.exec(navigator.userAgent);
+          if ( !webkit_rev || (521 - webkit_rev[1]).toString()[0] == "-" )
+            enableExpandDir(null, $("#dirlist tr"));
         </py:if>
         <py:if test="file and file.annotate">
           enableBlame("${href.changeset()}/", "${path}");
