--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -24,11 +24,18 @@
         $("div.description").find("h1,h2,h3,h4,h5,h6").addAnchor("Link to this section");
       <py:when test="ticket.exists">
         $("#changelog h3.change").addAnchor("Link to this change");
+
+        /* only enable control elements for the currenly selected action */
+        var actions = $("fieldset[@id='action']//input[@name='action']");
+        /* ... as Opera doesn't like $("#action input[@name=action]") */
+
         function updateActionFields() {
-          $("#resolve_choice").enable($("#resolve").checked());
-          $("#reassign_choice").enable($("#reassign").checked());
+          actions.each(function () {
+            $(this).siblings().find("*[@id]").enable($(this).checked());
+            $(this).siblings().filter("*[@id]").enable($(this).checked());
+          });
         }
-        $("//fieldset[@id='action']/input[@name='action']").click(updateActionFields);
+        actions.click(updateActionFields);
         updateActionFields();
       </py:when>
       <py:otherwise>
@@ -319,41 +326,17 @@ ${comment}</textarea></p>
 
         </fieldset>
 
-        <py:choose test="not actions or actions == ['leave']">
-
-          <input py:when="True" type="hidden" name="action" value="leave" />
-
-          <fieldset py:otherwise="" id="action" py:with="action = action or 'leave'">
+        <!-- do not display the actions for New tickets -->
+        <py:if test="ticket.id">
+          <fieldset id="action">
             <legend>Action</legend>
-            <py:for each="button in filter(None, [
-              ('leave', 'leave as ' + ticket.status),
-              ('accept' in actions and ('accept', 'accept ticket') or None),
-              ('reopen' in actions and ('reopen', 'reopen ticket') or None),
-              ('resolve' in actions and ('resolve', '', 'as', resolve_resolution,
-                [f for f in fields if f.name == 'resolution'][0].options) or None),
-              ('reassign' in actions and ('reassign', '', 'to', reassign_owner,
-                [f for f in fields if f.name == 'owner'][0].options) or None)
-            ])" py:with="name = button[0]; label = button[1] or button[0]">
-              <input type="radio" id="$name" name="action" value="$name"
-                     checked="${action == name and 'checked' or None}" />
-              <label for="$name">$label</label>
-              <label py:if="len(button) > 2" for="${name}_choice"
-                     py:with="sublabel, subval, suboptions = button[2:]"
-                     py:choose="">
-                ${sublabel}:
-                <select py:when="suboptions" size="1" id="${name}_choice"
-                        name="${name}_choice">
-                  <option py:for="option in suboptions"
-                          selected="${option == subval or None}"
-                          py:content="option" />
-                </select>
-                <input py:otherwise="" type="text" id="${name}_choice"
-                       name="${name}_choice" size="40" value="$subval" />
-              </label>
-              <br />
-            </py:for>
+            <div py:for="key, label, html in action_controls">
+              <input type="radio" id="$key" name="action" value="$key" checked="${action == key or None}" />
+                <label for="$key">$label</label>
+                <span py:replace="html"/>
+            </div>
           </fieldset>
-        </py:choose>
+        </py:if>
 
         <p py:if="not ticket.exists and can_attach">
           <label>
