Error message template: when rendering !TracError messages containing markup, we need to take care not to embed a <p> within the <p class="message">.
Also, we take this occasion to do some html->tag changes, clean-up some import statements and update a few copyright dates.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5388 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/error.html
+++ b/trac/templates/error.html
@@ -84,7 +84,10 @@ ${traceback}
       <py:choose test="type">
         <py:when test="'TracError'">
           <h1>$title</h1>
-          <p class="message">$message</p>
+          <py:choose test="">
+            <p py:if="istext(message)" class="message">$message</p>
+            <py:otherwise>$message</py:otherwise>
+          </py:choose>
         </py:when>
         <py:when test="'internal'">
           <h1>Oops&hellip;</h1>
