Typo in admin plugin template.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5407 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_plugins.html
+++ b/trac/admin/templates/admin_plugins.html
@@ -50,7 +50,7 @@
                  disabled="${plugin.readonly or None}" />
         </div>
         <py:if test="plugin.info">
-          <p class="summary">$plugin.info.get('summary')</p>
+          <p class="summary">${plugin.info.get('summary')}</p>
           <dl py:if="'home_page' in plugin.info or
                      'author' in plugin.info or
                      'author_email' in plugin.info"
