TracQuery: fix some validation issues in the template and comment the change done in r5429
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5430 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query.html
+++ b/trac/ticket/templates/query.html
@@ -41,8 +41,8 @@
       </div>
 
       <form id="query" method="post" action="${href.query()}">
-        <input py:if="'id' in query.constraints" type="hidden" name="id" value="${query.constraints['id']}" />
         <fieldset id="filters">
+          <input py:if="'id' in query.constraints" type="hidden" name="id" value="${query.constraints['id']}" />
           <legend>Filters</legend>
           <table summary="Query filters">
             <tbody>
@@ -214,21 +214,27 @@
                      new = 'REPORT_CREATE' in req.perm;
                      delete = report and 'REPORT_DELETE' in req.perm">
         <form py:if="edit" method="get" action="${report.resource_href()}">
-          <input type="hidden" name="action" value="edit" />
-          <input type="submit" title="Edit report {$report.id} corresponding to this query"
-                 value="Edit query" />
+          <div>
+            <input type="hidden" name="action" value="edit" />
+            <input type="submit" title="Edit report {$report.id} corresponding to this query"
+                   value="Edit query" />
+          </div>
         </form>
         <form py:if="new or edit" method="get" action="${edit and report.resource_href() or req.href.report()}">
-          <input type="hidden" name="action" value="${edit and 'edit' or 'new'}" />
-          <input type="hidden" name="query" value="${query.to_string(req)}" />
-          <input type="submit" value="Save query"
-                 title="${edit and ('Save updated query in report {%s}' % report.id) or
-                          'Create new report from current query'}" />
+          <div>
+            <input type="hidden" name="action" value="${edit and 'edit' or 'new'}" />
+            <input type="hidden" name="query" value="${query.to_string(req)}" />
+            <input type="submit" value="Save query"
+                   title="${edit and ('Save updated query in report {%s}' % report.id) or
+                            'Create new report from current query'}" />
+          </div>
         </form>
         <form py:if="delete" method="get" action="${report.resource_href()}">
-          <input type="hidden" name="action" value="delete" />
-          <input type="submit" title="Delete report {$report.id} corresponding to this query"
-                 value="Delete query" />
+          <div>
+            <input type="hidden" name="action" value="delete" />
+            <input type="submit" title="Delete report {$report.id} corresponding to this query"
+                   value="Delete query" />
+          </div>
         </form>
       </div>
 
