WorkFlow: some interface changes for the ITicketActionController
 - `render_ticket_action_control` returns now a `(label, control, hint)` tuple.
   The `hint` will be used to inform the user about what will happen if the action is performed.
 - `get_ticket_changes` now returns simply the dictionary containing the ticket changes, instead of that dictionary plus a description of the change. That description was barely used (only by one sample plugin), and if there's a need to warn the user, the standard `req.warning` mechanism will achieve the same effect.

Also:
 - further improvements to the documentation 
 - adapt the sample plugins to the above API changes (well, for those not already anticipating it!)
 - the !CodeReview sample plugin has also been refactored a bit

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5444 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -326,14 +326,15 @@ ${comment}</textarea></p>
 
         </fieldset>
 
-        <!-- do not display the actions for New tickets -->
-        <py:if test="ticket.id">
+        <!--! Workflow support -->
+        <py:if test="ticket.id"> <!--! do not display the actions for New tickets -->
           <fieldset id="action">
             <legend>Action</legend>
-            <div py:for="key, label, html in action_controls">
+            <div py:for="key, label, controls, hints in action_controls">
               <input type="radio" id="$key" name="action" value="$key" checked="${action == key or None}" />
                 <label for="$key">$label</label>
-                <span py:replace="html"/>
+                $controls
+                <span class="hint" py:for="hint in hints">$hint</span>
             </div>
           </fieldset>
         </py:if>
