Fixing if/when confusion in the error template.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5445 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/error.html
+++ b/trac/templates/error.html
@@ -85,7 +85,7 @@ ${traceback}
         <py:when test="'TracError'">
           <h1>$title</h1>
           <py:choose test="">
-            <p py:if="istext(message)" class="message">$message</p>
+            <p py:when="istext(message)" class="message">$message</p>
             <py:otherwise>$message</py:otherwise>
           </py:choose>
         </py:when>
