Previewing or saving a new ticket or ticket changes won't trigger an error when there are some problems with the changes. Instead, it will revert to previewing mode along with one warning for each particular issue.
This addresses the #1146 issue as well as the #4100 one, as the user provided data can't be lost anymore.

All the validations are now done in the `_validate_ticket` method.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5449 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -179,6 +179,9 @@
                 <py:choose>
                   <py:when test="'preview' in change">
                     Preview of change by ${authorinfo(change.author)}
+                    <py:if test="not valid">
+                      (the change can't be saved, see the <a href="#warning"><em>warnings</em> above</a>)
+                    </py:if>
                   </py:when>
                   <py:otherwise>
                     Changed ${dateinfo(change.date)} ago by ${authorinfo(change.author)}
