Improved the layout of the ticket preview
So far, the preview was redirecting to the change preview block, which was at the bottom of the ticket ''Change History'' block. While this had the merit to show the change entry in the place it will take after the change is saved, this was a bit far away the top of the page, which also contains useful informations for the preview:
 - the occasional warnings in case of problems with the change
 - the new values for the ticket fields, among which the ticket description

Therefore, I moved that change preview block upward, just above the ticket box.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5453 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -65,20 +65,21 @@ h1 .status { color: #444; text-transform: lowercase; }
 }
 
 #changelog { border: 1px outset #996; padding: 1em }
-#changelog h3 {
+#preview { border: 1px outset #996; padding: 0 1em }
+#preview h3, #changelog h3 {
  border-bottom: 1px solid #d7d7d7;
  color: #999;
  font-size: 100%;
  font-weight: normal;
 }
-#changelog .threading, #changelog .inlinebuttons {
+#preview .threading, #changelog .threading, #changelog .inlinebuttons {
  float: right;
  position: relative;
  bottom: 0.3em;
 }
 
-#changelog .changes { list-style: square; margin-left: 2em; padding: 0 }
-#changelog .comment { margin-left: 2em }
+#preview .changes, #changelog .changes { list-style: square; margin-left: 2em; padding: 0 }
+#preview .comment, #changelog .comment { margin-left: 2em }
 
 form .field { margin-top: .75em; width: 100% }
 form #comment { width: 100% }
