Improved rendering of the Ticket preview, which now better matches the one of the Wiki preview.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5454 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -65,7 +65,7 @@ h1 .status { color: #444; text-transform: lowercase; }
 }
 
 #changelog { border: 1px outset #996; padding: 1em }
-#preview { border: 1px outset #996; padding: 0 1em }
+#preview { border: 1px solid #d7d7d7; padding: 1em }
 #preview h3, #changelog h3 {
  border-bottom: 1px solid #d7d7d7;
  color: #999;
